2-parsers/src/maths_parser.output
Nonterminals useless in grammar

    FUNCTION_NAME


Rules useless in grammar

   17 FUNCTION_NAME: T_LOG
   18              | T_EXP
   19              | T_SQRT


State 32 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: EXPR

    2 EXPR: TERM
    3     | EXPR T_PLUS TERM
    4     | EXPR T_MINUS TERM

    5 TERM: UNARY
    6     | TERM T_TIMES UNARY
    7     | TERM T_DIVIDE UNARY

    8 UNARY: FACTOR
    9      | T_MINUS FACTOR
   10      | UNARY T_EXPONENT UNARY

   11 FACTOR: T_NUMBER
   12       | T_VARIABLE
   13       | T_LBRACKET EXPR T_RBRACKET
   14       | T_LOG T_LBRACKET EXPR T_RBRACKET
   15       | T_EXP T_LBRACKET EXPR T_RBRACKET
   16       | T_SQRT T_LBRACKET EXPR T_RBRACKET


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_TIMES (258) 6
    T_DIVIDE (259) 7
    T_PLUS (260) 3
    T_MINUS (261) 4 9
    T_EXPONENT (262) 10
    T_LBRACKET (263) 13 14 15 16
    T_RBRACKET (264) 13 14 15 16
    T_LOG <string> (265) 14
    T_EXP <string> (266) 15
    T_SQRT <string> (267) 16
    T_NUMBER <number> (268) 11
    T_VARIABLE <string> (269) 12


Nonterminals, with rules where they appear

    $accept (15)
        on left: 0
    ROOT (16)
        on left: 1
        on right: 0
    EXPR <expr> (17)
        on left: 2 3 4
        on right: 1 3 4 13 14 15 16
    TERM <expr> (18)
        on left: 5 6 7
        on right: 2 3 4 6 7
    UNARY <expr> (19)
        on left: 8 9 10
        on right: 5 6 7 10
    FACTOR <expr> (20)
        on left: 11 12 13 14 15 16
        on right: 8 9


State 0

    0 $accept: • ROOT $end

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    ROOT    go to state 8
    EXPR    go to state 9
    TERM    go to state 10
    UNARY   go to state 11
    FACTOR  go to state 12


State 1

    9 UNARY: T_MINUS • FACTOR

    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    FACTOR  go to state 13


State 2

   13 FACTOR: T_LBRACKET • EXPR T_RBRACKET

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    EXPR    go to state 14
    TERM    go to state 10
    UNARY   go to state 11
    FACTOR  go to state 12


State 3

   14 FACTOR: T_LOG • T_LBRACKET EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 15


State 4

   15 FACTOR: T_EXP • T_LBRACKET EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 16


State 5

   16 FACTOR: T_SQRT • T_LBRACKET EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 17


State 6

   11 FACTOR: T_NUMBER •

    $default  reduce using rule 11 (FACTOR)


State 7

   12 FACTOR: T_VARIABLE •

    $default  reduce using rule 12 (FACTOR)


State 8

    0 $accept: ROOT • $end

    $end  shift, and go to state 18


State 9

    1 ROOT: EXPR •
    3 EXPR: EXPR • T_PLUS TERM
    4     | EXPR • T_MINUS TERM

    T_PLUS   shift, and go to state 19
    T_MINUS  shift, and go to state 20

    $default  reduce using rule 1 (ROOT)


State 10

    2 EXPR: TERM •
    6 TERM: TERM • T_TIMES UNARY
    7     | TERM • T_DIVIDE UNARY

    T_TIMES   shift, and go to state 21
    T_DIVIDE  shift, and go to state 22

    $default  reduce using rule 2 (EXPR)


State 11

    5 TERM: UNARY •
   10 UNARY: UNARY • T_EXPONENT UNARY

    T_EXPONENT  shift, and go to state 23

    $default  reduce using rule 5 (TERM)


State 12

    8 UNARY: FACTOR •

    $default  reduce using rule 8 (UNARY)


State 13

    9 UNARY: T_MINUS FACTOR •

    $default  reduce using rule 9 (UNARY)


State 14

    3 EXPR: EXPR • T_PLUS TERM
    4     | EXPR • T_MINUS TERM
   13 FACTOR: T_LBRACKET EXPR • T_RBRACKET

    T_PLUS      shift, and go to state 19
    T_MINUS     shift, and go to state 20
    T_RBRACKET  shift, and go to state 24


State 15

   14 FACTOR: T_LOG T_LBRACKET • EXPR T_RBRACKET

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    EXPR    go to state 25
    TERM    go to state 10
    UNARY   go to state 11
    FACTOR  go to state 12


State 16

   15 FACTOR: T_EXP T_LBRACKET • EXPR T_RBRACKET

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    EXPR    go to state 26
    TERM    go to state 10
    UNARY   go to state 11
    FACTOR  go to state 12


State 17

   16 FACTOR: T_SQRT T_LBRACKET • EXPR T_RBRACKET

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    EXPR    go to state 27
    TERM    go to state 10
    UNARY   go to state 11
    FACTOR  go to state 12


State 18

    0 $accept: ROOT $end •

    $default  accept


State 19

    3 EXPR: EXPR T_PLUS • TERM

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    TERM    go to state 28
    UNARY   go to state 11
    FACTOR  go to state 12


State 20

    4 EXPR: EXPR T_MINUS • TERM

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    TERM    go to state 29
    UNARY   go to state 11
    FACTOR  go to state 12


State 21

    6 TERM: TERM T_TIMES • UNARY

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    UNARY   go to state 30
    FACTOR  go to state 12


State 22

    7 TERM: TERM T_DIVIDE • UNARY

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    UNARY   go to state 31
    FACTOR  go to state 12


State 23

   10 UNARY: UNARY T_EXPONENT • UNARY

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    UNARY   go to state 32
    FACTOR  go to state 12


State 24

   13 FACTOR: T_LBRACKET EXPR T_RBRACKET •

    $default  reduce using rule 13 (FACTOR)


State 25

    3 EXPR: EXPR • T_PLUS TERM
    4     | EXPR • T_MINUS TERM
   14 FACTOR: T_LOG T_LBRACKET EXPR • T_RBRACKET

    T_PLUS      shift, and go to state 19
    T_MINUS     shift, and go to state 20
    T_RBRACKET  shift, and go to state 33


State 26

    3 EXPR: EXPR • T_PLUS TERM
    4     | EXPR • T_MINUS TERM
   15 FACTOR: T_EXP T_LBRACKET EXPR • T_RBRACKET

    T_PLUS      shift, and go to state 19
    T_MINUS     shift, and go to state 20
    T_RBRACKET  shift, and go to state 34


State 27

    3 EXPR: EXPR • T_PLUS TERM
    4     | EXPR • T_MINUS TERM
   16 FACTOR: T_SQRT T_LBRACKET EXPR • T_RBRACKET

    T_PLUS      shift, and go to state 19
    T_MINUS     shift, and go to state 20
    T_RBRACKET  shift, and go to state 35


State 28

    3 EXPR: EXPR T_PLUS TERM •
    6 TERM: TERM • T_TIMES UNARY
    7     | TERM • T_DIVIDE UNARY

    T_TIMES   shift, and go to state 21
    T_DIVIDE  shift, and go to state 22

    $default  reduce using rule 3 (EXPR)


State 29

    4 EXPR: EXPR T_MINUS TERM •
    6 TERM: TERM • T_TIMES UNARY
    7     | TERM • T_DIVIDE UNARY

    T_TIMES   shift, and go to state 21
    T_DIVIDE  shift, and go to state 22

    $default  reduce using rule 4 (EXPR)


State 30

    6 TERM: TERM T_TIMES UNARY •
   10 UNARY: UNARY • T_EXPONENT UNARY

    T_EXPONENT  shift, and go to state 23

    $default  reduce using rule 6 (TERM)


State 31

    7 TERM: TERM T_DIVIDE UNARY •
   10 UNARY: UNARY • T_EXPONENT UNARY

    T_EXPONENT  shift, and go to state 23

    $default  reduce using rule 7 (TERM)


State 32

   10 UNARY: UNARY • T_EXPONENT UNARY
   10      | UNARY T_EXPONENT UNARY •

    T_EXPONENT  shift, and go to state 23

    T_EXPONENT  [reduce using rule 10 (UNARY)]
    $default    reduce using rule 10 (UNARY)


State 33

   14 FACTOR: T_LOG T_LBRACKET EXPR T_RBRACKET •

    $default  reduce using rule 14 (FACTOR)


State 34

   15 FACTOR: T_EXP T_LBRACKET EXPR T_RBRACKET •

    $default  reduce using rule 15 (FACTOR)


State 35

   16 FACTOR: T_SQRT T_LBRACKET EXPR T_RBRACKET •

    $default  reduce using rule 16 (FACTOR)
